# testzeus-hercules

./: .dockerignore  .env-example  .gitignore  ABOUT_THIS_TEMPLATE.md  ARCHITECTURE.md  CONTRIBUTING.md  CodeofConduct.md  Containerfile  DockerReadme.md  Dockerfile  GPT5_USAGE.md  HISTORY.md  LICENSE  MANIFEST.in  MIGRATION.md  Makefile  Modelfile  README.md  README_COMPOSIO.md  agents_llm_config-example.json  agents_llm_config-example.json.txt  clean.sh  comprehensive_mobile_performance_test.py  entrypoint.sh  env-example  final_verification_summary.py  logging_verification_todo.txt  mark_accessibility_operations_logging_complete.py  mark_api_operations_logging_complete.py  mark_comprehensive_code_generation_complete.py  mark_dropdown_tool_complete.py  mark_file_upload_logging_complete.py  mark_general_integration_checks_complete.py  mark_hover_tool_complete.py  mark_input_tool_complete.py  mark_keyboard_logging_complete.py  mark_navigation_logging_complete.py  mark_page_content_logging_complete.py  mark_security_operations_logging_complete.py  mark_sql_operations_logging_complete.py  (+41 more)
.github/: rename_project.sh
.github/workflows/: main-push.yml  main-test.yml  main.yml  non-main-push.yml  non-main-test.yml  non-main.yml  release.yml
docs/: GPT5_USAGE.md  MCP_Usage.md  agent_validation_guide.md  appium_config_changes.md  appium_environment_variables.md  appium_guide.md  complete_debugging_guide.md  environment_variables.md  ios_config_example.md  performance_optimization.md  python_sandbox_execution.md  run_guide.md  sandbox_quick_reference.md
docs/Migration/: ARCHITECTURE.md  MIGRATION.md
frontend/interactive/: app.js  index.html
frontend/non-interactive/: app.js  index.html
helper_scripts/: agents_env.sh  browser_stack_generate_cdp_url.py  cdp_journey_script.py  generate_api_functional_gherkin_test.py  generate_api_security_gherkin_test.py  hercules_setup.sh  hercules_setup_custom.sh  hercules_windows_setup.ps1  json_clearner.py  lambda_test_generate_cdp_url.py  run_hercules_docker.ps1  run_hercules_docker.sh  vir_migration_script.py  write_json_to_var.sh  write_litellm_config.py  write_var_to_json.sh
helper_scripts/ExampleTests/: InlineEdit.feature  RowCheckbox.feature  SalesforcePicklist.feature  salesforcefileupload.feature  select.feature
hercules/: __init__.py  __main__.py  base.py  cli.py  config.py  interactive.py
hercules/core/: __init__.py  agents_llm_config.py  autogen_simple_wrapper.py  playwright_manager.py  post_process_responses.py  prompts.py  runner.py  ui_manager.py
hercules/core/agents/: __init__.py  browser_nav_agent.py  high_level_planner_agent.py
hercules/core/memory/: prompt_compressor.py  static_ltm.py
hercules/utils/: detect_llm_loops.py  dom_helper.py  formatting_helper.py  get_detailed_accessibility_tree.py  gherkin_helper.py  js_helper.py  junit_helper.py  logger.py  response_parser.py
opt/input/: test.feature
opt/test_data/: test_data.txt
statics/: Testzeus_Hercules_Demo.ipynb
tests/: conftest.py  test_base.py  test_certificate_errors.py  test_cli_config_file.py  test_feature_execution.py  test_gherkin_helper.py  test_junit_summary.py  test_llm_cli_aliases.py  test_llm_helper.py  test_mcp_langgraph.py  test_package_imports.py  test_playwright_manager_cdp_navigation.py  test_simple_hercules_executor.py  test_simple_hercules_langgraph.py  test_telemetry.py  test_validation_framework.py
tests/api_testing_app/: Dockerfile  Readme.md  main.py  requirements.txt
testzeus-hercules-mintlify/: introduction.mdx  mint.json  quickstart.mdx
testzeus-hercules-mintlify/api/: cli-options.mdx  configuration-files.mdx  environment-variables.mdx
testzeus-hercules-mintlify/architecture/: agents.mdx  memory-system.mdx  overview.mdx  tools.mdx
testzeus-hercules-mintlify/community/: contributing.mdx  slack.mdx  troubleshooting.mdx
testzeus-hercules-mintlify/configuration/: environment-variables.mdx  llm-setup.mdx  overview.mdx  project-structure.mdx
testzeus-hercules-mintlify/examples/: accessibility-testing.mdx  api-testing.mdx  mobile-automation.mdx  performance-testing.mdx  security-testing.mdx  ui-automation.mdx  visual-testing.mdx
testzeus-hercules-mintlify/installation/: docker.mdx  linux-mac-setup.mdx  overview.mdx  pypi.mdx  source.mdx  windows-setup.mdx
testzeus-hercules-mintlify/testing/: gherkin-syntax.mdx  running-tests.mdx  test-data.mdx  writing-first-test.mdx
testzeus_hercules/: VERSION  __init__.py  __main__.py  config.py  interactive.py  mcp_server.py  telemetry.py
testzeus_hercules/core/: __init__.py  agent_config_types.py  agent_registry.py  agents_llm_config.py  agents_llm_config_manager.py  appium_manager.py  autogen_simple_wrapper.py  browser_logger.py  config_env_loader.py  config_file_loader.py  config_portkey_loader.py  device_manager.py  ios_gestures.py  notification_manager.py  playwright_manager.py  post_process_responses.py  prompts.py  runner.py  simple_hercules.py  ui_manager.py
testzeus_hercules/integration/: __init__.py  code_generator_integration.py  dual_mode_adapter.py
testzeus_hercules/js/: injectOverlay.js
testzeus_hercules/utils/: autogen_sequential_function_call.py  automation_script_template.py  cli_helper.py  detect_llm_loops.py  dom_helper.py  dom_mutation_observer.py  excel_helper.py  geo_handler.py  get_detailed_accessibility_tree.py  gherkin_generator.py  gherkin_helper.py  html_helper.py  js_helper.py  junit_helper.py  langchain_tools.py  litellm_helper.py  llm_helper.py  llm_sanitizer.py  logger.py  mcp_help.py  mcp_helper.py  model_utils.py  nltk_security_patcher.py  response_parser.py  sequential_function_call.py  test_builder.py  timestamp_helper.py  ui_messagetype.py
testzeus_hercules_tools/: README.md  __init__.py  config.py  example.py  playwright_manager.py  setup.py
testzeus_hercules_tools/tools/: __init__.py  accessibility_operations.py  api_operations.py  base.py  click.py  code_generator.py  dropdown.py  file_upload.py  hover.py  input.py  keyboard.py  logger.py  navigation.py  page_content.py  security_operations.py  sql_operations.py  time_operations.py
(+213 files in other folders)
