[project]
name = "testzeus-hercules"
version = "0.2.0"
description = "Hercules: The World's First Open-Source AI Agent for End-to-End Testing"
authors = [{ name = "Shriyansh Agnihotri", email = "shriyansh@testzeus.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
keywords = [
    "AI",
    "end-to-end testing",
    "automation",
    "Hercules",
    "TestZeus",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nest-asyncio>=1.6.0,<2",
    "pillow>=12.1.1,<13",
    "playwright<=1.49.0",
    "pydantic>=2.6.2,<3",
    "python-dotenv>=1.0.0,<2",
    "python-json-logger>=2.0.7,<3",
    "pyyaml>=6.0.1,<7",
    "sqlalchemy>=2.0.36,<3",
    "junitparser>=3.2.0,<4",
    "sentry-sdk>=2.18.0,<3",
    "playwright-recaptcha>=0.5.1,<0.6",
    "junit2html>=31.0.2,<32",
    "aiohttp>=3.13.2,<4",
    "inflection>=0.5.1,<0.6",
    "ag2[lmm, mcp, openai, groq, bedrock, anthropic, gemini]>=0.10.0,<0.11",
    "mcp>=1.23.3,<2",
    "psutil>=5.9.0,<8",
    "aiofiles>=24.1.0,<25",
    "chromadb>=1.0.16,<2",
    "sentence-transformers>=3.4.1,<4",
    "unstructured[all-docs]>=0.18.18,<0.19",
    "httpx>=0.28.1,<0.29",
    "portkey-ai>=1.11.1,<2",
    "opentelemetry-proto>=1.27.0",
    "starlette>=0.50.0,<0.51",
    "urllib3>=2.6.1,<3",
    "pypdf>=6.7.1,<7",
    "fonttools>=4.61.0,<5",
    "transformers>=4.57.3,<5",
    "requests>=2.32.5,<3",
    "torch>=2.9.1,<3",
    "protobuf>=6.33.5,<7",
    "cryptography>=46.0.5,<47",
]

[project.urls]
Homepage = "https://testzeus.com/hercules"
Repository = "https://github.com/testzeus/testzeus-hercules"
Documentation = "https://testzeus.com/hercules/docs"

[project.scripts]
testzeus-hercules = "testzeus_hercules.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "coverage>=7.6.4,<8",
    "black>=24.10.0,<25",
    "isort>=5.13.2,<6",
    "pytest-cov>=6.0.0,<7",
    "mypy>=1.13.0,<2",
    "gitchangelog>=3.0.4,<4",
    "mkdocs>=1.6.1,<2",
    "ipdb>=0.13.13,<0.14",
    "twine>=5.1.1,<6",
    "deptry>=0.21.0,<0.22",
    "pytest-rerunfailures>=15.0,<16",
]

[tool.setuptools]
packages = ["testzeus_hercules"]

[tool.setuptools.package-data]
testzeus_hercules = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["testzeusagent",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = false

[tool.ruff]
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [
    "E",   # Error
    "F",   # Pyflakes
    "W",   # Pycodestyle
    "C90", # McCabe complexity
    "I",   # Isort
    "N",   # pep8-naming
    "D",   # Pydocstyle
    "ANN", # Pytype annotations
    "S",   # Bandit
    "B",   # Bugbear
    "COM", # Commas
    "C4",  # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "PYI", # validate pyi files
    "Q",   # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL",  # PyLint checks
    "RUF", # Specific to Ruff checks
]
lint.ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "B008",    # Do not perform function calls in argument defaults
    "D211",    # No blank lines allowed before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "D202",    # No blank lines allowed after function docstring
    "ANN102",  # Missing type annotation for self in method
    "ANN101",  # Missing type annotation for argument
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
]
lint.mccabe = { max-complexity = 10 }
exclude = [
    "testzeusagent/db/migrations",
    ".venv/"
]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Use of assert detected
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]
